tests/paczka1/fuzzy1/95384373.err
Error in line 4: A532 A532 84,6
Error in line 2: hhkzrF A69 73,5
Error in line 8: hhkzrF A647 11,7
Error in line 19: a27y1OkwD A69 83,6
Error in line 21: A532 S704 10,8
Error in line 33: 7D7uFkSSil A647 62,1
